--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql.hostinger.com.br
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=u631913065_simul
+DB_USERNAME=u631913065_simul
+DB_PASSWORD=simulado
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
